代码生成器动态模板